fix: overflows

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   }
 } */
 
+html,
 body {
   font-family: Roboto, Arial, Helvetica, sans-serif;
   overflow-x: hidden;
